--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "lucatume/args": "dev-master"
+    }
 }
